--- a/stylesheets/scss/_search.scss
+++ b/stylesheets/scss/_search.scss
@@ -13,7 +13,6 @@
   margin-left: 15px;
   height: $search-height-1;
   line-height: 1;
-  @include bg($white);
 
   &.inline {
     display: none;
@@ -130,7 +129,6 @@
   padding: 0 30px 0 12px;
   font-family: inherit;
   font-size: 12px;
-  line-height: $search-height-1;
   @include color($secondary-color, 0.67);
   @include bg($white);
   box-sizing: border-box;
